Fixed field size and alignment + Show password

--- a/style.css
+++ b/style.css
@@ -256,6 +256,7 @@ div {
 
   .login-signup-page .form-wrapper {
     overflow: hidden;
+    
     max-width: 600px;
     background: rgb(230, 230, 230);
     padding: 30px;
@@ -337,6 +338,7 @@ div {
   .login-signup-page .form-container .form-inner {
     display: flex;
     width: 200%;
+    text-align: center;
   }
 
   .login-signup-page .form-container .form-inner form {
@@ -346,8 +348,10 @@ div {
 
   .login-signup-page .form-inner form .field {
     height: 50px;
-    width: 100%;
+    width: 90%;
     margin-top: 20px;
+    margin-right: auto;
+    margin-left: auto;
   }
 
   .login-signup-page .form-inner form .field input {
